fix(pdsls): add missing colour variables

--- a/styles/pdsls/catppuccin.user.less
+++ b/styles/pdsls/catppuccin.user.less
@@ -17,7 +17,7 @@
 
 @import "https://userstyles.catppuccin.com/lib/lib.less";
 
-@-moz-document domain("pdsls.dev") {
+@-moz-document domain("pdsls.dev"), domain("pds.ls") {
   html.dark {
     #catppuccin(@darkFlavor);
   }
@@ -30,48 +30,51 @@
     #lib.palette();
     #lib.defaults();
 
-    // new
+    --color-red-300: @red;
+    --color-red-400: @red;
+    --color-green-300: @green;
+    --color-green-400: @green;
+    --color-blue-400: @accent;
+    --color-blue-500: @accent;
+
     --color-white: @base;
 
     --color-dark-100: @surface1;
     --color-dark-200: @surface0;
     --color-dark-300: @surface0;
-    --color-dark-500: @base !important;
+    --color-dark-500: @base;
     --color-dark-800: @mantle;
 
-    --color-blue-400: @accent;
-    --color-red-400: @red;
-
     & when not(@flavor =latte) {
+      --color-neutral-100: @subtext1;
       --color-neutral-200: @text;
+      --color-neutral-300: @subtext1;
+      --color-neutral-600: @surface0;
       --color-neutral-700: @surface1;
-      --color-neutral-600: @surface1;
+      --color-neutral-900: @base;
     }
 
     & when (@flavor =latte) {
+      --color-neutral-100: @base;
       --color-neutral-200: @surface0;
-      --color-neutral-700: @text;
+      --color-neutral-300: @surface2;
       --color-neutral-600: @subtext1;
+      --color-neutral-700: @text;
+      --color-neutral-900: @text;
     }
 
     --color-neutral-50: @base;
-    --color-neutral-100: @base;
-    --color-neutral-300: @surface1;
     --color-neutral-400: @subtext0;
-
-
+    --color-neutral-500: @subtext0;
+    --color-neutral-800: @base;
 
     background-color: @base;
 
-    .text-neutral-900,
-    .dark\:text-neutral-200 {
-      color: @text !important;
+    header {
+      --header-bg: @base;
     }
 
-    .dark\:bg-neutral-200 {
-      background-color: @text !important;
-    }
-
+    // pdsls logo
     .tabler--binary-tree-filled {
       color: @accent;
     }
